# traingle

./: Cargo.toml  README.md
collections/: Cargo.toml
collections/src/: big_co.rs  main.rs  math.rs  pig_latin.rs
collections/src/big_co/: command.rs  company.rs  query.rs
cons/: Cargo.toml
cons/src/: main.rs
dll/: Cargo.toml
dll/src/: lib.rs
ref-cell/: Cargo.toml
ref-cell/src/: lib.rs
src/: cache.rs  face.rs  generation.rs  geom.rs  img.rs  main.rs  member.rs  pixel_group.rs  point.rs  triangle.rs
src/geom/: point.rs  triangle.rs
traingle/src/: face.rs  generation.rs  img.rs  main.rs  member.rs  point.rs
