[package]
name = "traingle"
version = "0.1.0"
authors = ["Mickey Burks <brks.mck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rand_distr = "0.4.0"
spade = "1.8.2"
image = "0.23.14"
nalgebra = "0.26.2"
